--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,28 @@ h1 {
     text-align: center;
     margin-top: 4px;
     margin-bottom: 0;
+    font-size: 2.1rem;
+    font-weight: 600;
+    line-height: 1em;
+}
+
+h1 input[type="date"] {
+    font-size: 0.5em;
+    margin: 0 0.3em;
+    padding: 2px 6px;
+    border-radius: 5px;
+    border: 1.2px solid #cbd5e1;
+    background: #f8fafc;
+    vertical-align: middle;
+    display: inline-block;
+    height: 2em;
+    min-width: 140px;
 }
 
 #calendar-overlay-wrap {
     width: 100vw;
     max-width: 100vw;
-    margin: 22px auto 0 auto;
+    margin: 5px auto 0 auto;
     box-shadow: 0 2px 24px #e0e7ef;
     border-radius: 18px;
     position: relative;
@@ -162,7 +178,7 @@ h1 {
 }
 
 .calendar-inputs-wrap {
-    margin: 1.4rem auto 0rem auto;
+    margin: 0.3rem auto 0rem auto;
     max-width: 1160px;
     display: flex;
     flex-wrap: wrap;
@@ -236,4 +252,17 @@ textarea {
     background: #969696 !important;
     /* lighter grey */
     color: #b7bac7 !important;
+}
+
+.date-inline-picker {
+    font-size: 0.7em;
+    margin: 0 0.3em;
+    padding: 2px 6px;
+    border-radius: 5px;
+    border: 1.2px solid #cbd5e1;
+    background: #f8fafc;
+    vertical-align: middle;
+    display: inline-block;
+    height: 1em;
+    min-width: 140px;
 }
